syntax = "proto3";

option java_multiple_files = true;
package com.bynfor.service;

message Item {
    string code = 1;
    int32 qty = 2;
}

message ItemList {
    repeated Item item = 1;
}

message UpdateItemsResp {
        string code = 1;
}

service InventoryService {
    rpc updateItems(ItemList) returns (UpdateItemsResp);
}